change some style

--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -5,3 +5,10 @@ $light-color:#4e2d66;
 $p1: #fff;
 $p2: #409eff;
 $p3: #4e2d66;
+
+$btn-bg-light: rgba(128, 0, 128, 0.65);
+
+$btn-bg-dark: rgba(128, 0, 128, 1);
+$ftn-big-size: 21px;
+$txt-s1-color: #2c3e50;
+$sep: #e4e7ed;
