--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -12,3 +12,15 @@ $btn-bg-dark: rgba(128, 0, 128, 1);
 $ftn-big-size: 21px;
 $txt-s1-color: #2c3e50;
 $sep: #e4e7ed;
+
+
+.sub-content{
+    //font-family: Raleway, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 18px;
+    font-weight: normal;
+    //letter-spacing: 1px;
+    line-height: 1.6;
+    text-align: left;
+    padding: 15px 0 20px 20px;
+    border-left: 1px solid #e4e7ed;
+}
